--- a/person.html
+++ b/person.html
@@ -24,20 +24,7 @@
     <!---*-*-*-*-*-*-*-*--*-*-*- Navbar Section --*-*-*-*-*-*-*-*-*-*-*-->
     <div class="navbar">
       <div class="navbar-top">
-        <div class="navbar__menu">
-          <!-- <span
-            class="material-symbols-outlined navbar__menu--side-toggle"
-            id="sideNavBtn"
-          >
-            menu
-          </span>
-          <div class="navbar__menu--logo">
-            <span class="material-symbols-outlined navbar__main--logo__icon">
-              home</span
-            >
-            <div class="navbar__main--logo__name">Skyz<span>CRM</span></div>
-          </div> -->
-        </div>
+        <div></div>
 
         <div class="navbar__main-container">
           <div class="navbar__main">
@@ -47,7 +34,7 @@
                   <div class="navbar__main--search__links-container">
                     <div
                       class="round-btn round-btn-primary yellow"
-                      id="sideNavBtn"
+                      id="hamburger-btn"
                     >
                       <span class="material-symbols-outlined"> menu </span>
                     </div>
@@ -141,7 +128,7 @@
         </div>
       </div>
 
-      <div class="navbar-bottom">
+      <div class="navbar-bottom create-show active">
         <div class="create-container">
           <div class="icons-container-create">
             <div class="create-category" data-color="gray">
@@ -610,7 +597,7 @@
           </div>
         </div>
       </div>
-      <div class="navbar-bottom menu">
+      <div class="navbar-bottom menu active">
         <div class="menu">
           <div class="menu-item">
             <span class="material-symbols-outlined"> settings </span>
@@ -633,275 +620,11 @@
           </div>
         </div>
       </div>
-      <!-- <div class="navbar-bottom skyz active">
-        <div class="full-menu">
-          <div class="full-menu__box">
-            <div class="full-menu__box--title">
-              <span class="material-symbols-outlined"> category </span>
-              <span>מועדפים</span>
-            </div>
-            <ul class="full-menu__box--list">
-              <li>דף הבית</li>
-              <li>אנשים</li>
-              <li>ארגונים</li>
-              <li>המשימות שלי</li>
-              <li>מיילים שלי</li>
-              <li>קריאות</li>
-            </ul>
-          </div>
-          <div class="full-menu__box">
-            <div class="full-menu__box--title">
-              <span class="material-symbols-outlined"> category </span>
-              <span>כרטסות</span>
-            </div>
-            <ul class="full-menu__box--list">
-              <li>לידים</li>
-              <li>אנשים</li>
-              <li>ארגונים</li>
-              <li>משאבים</li>
-              <li>תקשורת</li>
-            </ul>
-          </div>
-          <div class="full-menu__box">
-            <div class="full-menu__box--title">
-              <span class="material-symbols-outlined"> category </span>
-              <span>פעולות</span>
-            </div>
-            <ul class="full-menu__box--list">
-              <li>משימות</li>
-              <li>שיחות</li>
-              <li>פגישות</li>
-              <li>קריאות</li>
-              <li>הזדמנויות</li>
-              <li>הערות</li>
-              <li>דיווחי שעות</li>
-              <li>קבצים</li>
-              <li>מיילים</li>
-              <li>פתרונות</li>
-            </ul>
-          </div>
-          <div class="full-menu__box">
-            <div class="full-menu__box--title">
-              <span class="material-symbols-outlined"> category </span>
-              <span>קדם מכירות</span>
-            </div>
-            <ul class="full-menu__box--list">
-              <li>הזדמנויות</li>
-              <li>הצעות מחיר</li>
-              <li>הזמנות</li>
-              <li>קמפיינים</li>
-            </ul>
-          </div>
-          <div class="full-menu__box">
-            <div class="full-menu__box--title">
-              <span class="material-symbols-outlined"> category </span>
-              <span>חשבוניות/קבלות</span>
-            </div>
-            <ul class="full-menu__box--list">
-              <li>חשבוניות עסקה</li>
-              <li>חשבוניות מס</li>
-              <li>חשבנויות מס/קבלה</li>
-              <li>קבלות</li>
-              <li>הפקדות בנק</li>
-            </ul>
-          </div>
-          <div class="full-menu__box">
-            <div class="full-menu__box--title">
-              <span class="material-symbols-outlined"> category </span>
-              <span>זיכויים</span>
-            </div>
-            <ul class="full-menu__box--list">
-              <li>חשבונית מס זיכוי</li>
-              <li>חשבונית עסקה זיכוי</li>
-              <li>קבלה זיכוי</li>
-            </ul>
-          </div>
-          <div class="full-menu__box">
-            <div class="full-menu__box--title">
-              <span class="material-symbols-outlined"> category </span>
-              <span>הוראות</span>
-            </div>
-            <ul class="full-menu__box--list">
-              <li>הוראות חיוב</li>
-              <li>הוראות זיכוי</li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
     </div>
 
     <div class="navbar__overlay"></div>
 
-    <!---*-*-*-*-*-*-*-*--*-*-*- Sidebar Section --*-*-*-*-*-*-*-*-*-*-*-->
-    <!-- <aside class="side-nav active" dir="rtl">
-      <div class="side-nav__content">
-        <ul class="side-nav__content--list">
-          <li class="side-nav__content--list__item" id="homeBtn">
-            <div class="item-name">
-              <a href="#">
-                <span class="material-symbols-outlined"> home </span>
-                <div>SkyzCRM</div>
-              </a>
-            </div>
-          </li>
-          <li class="side-nav__content--list__item">
-            <div class="item-name">
-              <a href="formPDF.html">
-                <span class="material-symbols-outlined"> view_timeline </span>
-                <div>טופס</div>
-              </a>
-              <span class="material-symbols-outlined btn-default">
-                expand_more
-              </span>
-            </div>
-          </li>
-          <li class="side-nav__content--list__item" id="actionsBtn">
-            <div class="item-name">
-              <a href="#">
-                <span class="material-symbols-outlined"> category </span>
-                <div>פעולות</div>
-              </a>
-              <span class="material-symbols-outlined btn-default">
-                expand_more
-              </span>
-            </div>
-          </li>
-          <li class="side-nav__content--list__item">
-            <div class="item-name">
-              <a href="calendar.html">
-                <span class="material-symbols-outlined"> event </span>
-                <div>יומן</div>
-              </a>
-              <span class="material-symbols-outlined btn-default">
-                expand_more
-              </span>
-            </div>
-          </li>
-          <li class="side-nav__content--list__item">
-            <div class="item-name">
-              <a href="kanban.html">
-                <span class="material-symbols-outlined"> view_kanban </span>
-                <div>תצוגת קנבן</div>
-              </a>
-              <span class="material-symbols-outlined btn-default">
-                expand_more
-              </span>
-            </div>
-          </li>
-          <li id="acountsBtnSidebar" class="side-nav__content--list__item">
-            <div class="item-name">
-              <a href="#">
-                <span class="material-symbols-outlined">
-                  account_balance_wallet
-                </span>
-                <div>חשבונות</div>
-              </a>
-              <span
-                class="material-symbols-outlined btn-default btn-actions-menu"
-              >
-                expand_more
-              </span>
-            </div>
-            <div
-              class="side-nav__content--list__item--collapse active"
-              id="acountsCollapse"
-            >
-              <span>הכול</span>
-              <span>פתוחים</span>
-              <span>בתהליך</span>
-            </div>
-          </li>
-          <li class="side-nav__content--list__item">
-            <div class="item-name">
-              <a href="edit-person.html">
-                <span class="material-symbols-outlined"> person </span>
-                <div>עריכת איש</div>
-              </a>
-              <span
-                class="material-symbols-outlined btn-default btn-actions-menu"
-              >
-                expand_more
-              </span>
-            </div>
-          </li>
-          <li class="side-nav__content--list__item">
-            <div class="item-name">
-              <a href="new-person.html">
-                <span class="material-symbols-outlined"> person </span>
-                <div>איש חדש</div>
-              </a>
-              <span
-                class="material-symbols-outlined btn-default btn-actions-menu"
-              >
-                expand_more
-              </span>
-            </div>
-          </li>
-          <li class="side-nav__content--list__item">
-            <div class="item-name">
-              <a href="#">
-                <span class="material-symbols-outlined"> chat </span>
-                <div>צ'אט</div>
-              </a>
-              <span
-                class="material-symbols-outlined btn-default btn-actions-menu"
-              >
-                expand_more
-              </span>
-            </div>
-          </li>
-          <li class="side-nav__content--list__item">
-            <div class="item-name">
-              <a href="#">
-                <span class="material-symbols-outlined"> handyman </span>
-                <div>הגדרות</div>
-              </a>
-              <span
-                class="material-symbols-outlined btn-default btn-actions-menu"
-              >
-                expand_more
-              </span>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </aside> -->
-
     <div class="main">
-      <!---*-*-*-*-*-*-*-*--*-*-*- Search For Small Screen --*-*-*-*-*-*-*-*-*-*-*-->
-      <!-- <section class="small-screen-search">
-        <div class="field-container">
-          <div class="input-container">
-            <input
-              type="text"
-              class="input"
-              placeholder="חיפוש..."
-              id="searchInput"
-            />
-            <div class="navbar__main--search__links-container">
-              <div class="round-btn round-btn-primary">
-                <span class="material-symbols-outlined"> search </span>
-              </div>
-              <div class="round-btn round-btn-secondary">
-                <span class="material-symbols-outlined" id="addMenuBtn">
-                  add
-                </span>
-              </div>
-              <div>
-                <span class="material-symbols-outlined label-icon">
-                  expand_more
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="small-screen-append__navbar-main"></div>
-        <div class="navbar__create-append">
-          <div class="group-container-create-append"></div>
-        </div>
-      </section> -->
-
       <!-- -*-*-*-*-*-*-*-*--*-*-*- Card Section - Person --*-*-*-*-*-*-*-*-*-*-* -->
       <section class="card-container" id="personCard">
         <div class="card">
@@ -4034,12 +3757,9 @@
     </div>
 
     <!-- *-*-*-*-*-*-*-*-*-*-*-*-*-*-* JavaScript Files *-*-*-*-*-*-*-*-*-*-*-*-*-*-* -->
-    <!-- Sidebar -->
-    <script src="./up/js/sidebar.js"></script>
-    <!-- Dark Mode -->
     <script src="./up/js/dark-mode.js"></script>
     <script src="up/js/edit-address.js"></script>
     <script src="/up/js/person.js"></script>
-    <script src="/up/js/sidebar.js"></script>
+    <script src="/up/js/navbar.js"></script>
   </body>
 </html>
