--- a/person.html
+++ b/person.html
@@ -92,7 +92,7 @@
                     type="text"
                     class="navbar-input"
                     placeholder="צור/הצג..."
-                    id="searchInput"
+                    id="createInput"
                   />
                   <div class="navbar__main--search__links-container">
                     <div
