--- a/person.html
+++ b/person.html
@@ -24,8 +24,6 @@
     <!---*-*-*-*-*-*-*-*--*-*-*- Navbar Section --*-*-*-*-*-*-*-*-*-*-*-->
     <div class="navbar">
       <div class="navbar-top">
-        <div></div>
-
         <div class="navbar__main-container">
           <div class="navbar__main">
             <div class="navbar__main--menu">
@@ -40,6 +38,41 @@
                     </div>
                   </div>
                   <div class="skyz-name active">SKYZ</div>
+                </div>
+              </div>
+              <div class="menu active">
+                <div class="menu-item">
+                  <span class="material-symbols-outlined"> settings </span>
+                  <b>הגדרות:</b>
+                  <span>שלי</span>
+                  <span class="material-symbols-outlined stop-icon">
+                    stop
+                  </span>
+                  <span>ניהול המערכת</span>
+                </div>
+                <div class="menu-item">
+                  <!-- <span class="material-symbols-outlined"> dark_mode </span> -->
+                  <span
+                    class="material-symbols-outlined fill-icon color-change"
+                    style="cursor: pointer"
+                    >circle</span
+                  >
+                  <div class="darkmode-toggle">
+                    <button aria-label="darkmode-toggle" id="darkmodeToggle">
+                      <span class="material-symbols-outlined"> dark_mode </span>
+                    </button>
+                  </div>
+                  <span>מצב כהה / dark mode</span>
+                </div>
+                <div class="menu-item">
+                  <span class="material-symbols-outlined">
+                    developer_board
+                  </span>
+                  <span>מידע למפתחים</span>
+                </div>
+                <div class="menu-item">
+                  <span class="material-symbols-outlined"> question_mark </span>
+                  <span>הדרכה על המערכת</span>
                 </div>
               </div>
             </div>
@@ -110,7 +143,7 @@
           </div>
         </div>
 
-        <div class="navbar__personal">
+        <!-- <div class="navbar__personal">
           <span
             class="material-symbols-outlined fill-icon color-change"
             style="cursor: pointer"
@@ -121,11 +154,10 @@
               <span class="material-symbols-outlined"> dark_mode </span>
             </button>
           </div>
-          <!-- <div class="navbar__personal--name">Impact System</div> -->
-          <!-- <div class="round-img-container">
+          <div class="round-img-container">
             <img src="./up/imgs/passport.webp" alt="" />
-          </div> -->
-        </div>
+          </div>
+        </div> -->
       </div>
 
       <div class="navbar-bottom create-show active">
@@ -594,29 +626,6 @@
                 </span>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-      <div class="navbar-bottom menu active">
-        <div class="menu">
-          <div class="menu-item">
-            <span class="material-symbols-outlined"> settings </span>
-            <b>הגדרות:</b>
-            <span>שלי</span>
-            <span class="material-symbols-outlined stop-icon"> stop </span>
-            <span>ניהול המערכת</span>
-          </div>
-          <div class="menu-item">
-            <span class="material-symbols-outlined"> dark_mode </span>
-            <span>מצב כהה / dark mode</span>
-          </div>
-          <div class="menu-item">
-            <span class="material-symbols-outlined"> developer_board </span>
-            <span>מידע למפתחים</span>
-          </div>
-          <div class="menu-item">
-            <span class="material-symbols-outlined"> question_mark </span>
-            <span>הדרכה על המערכת</span>
           </div>
         </div>
       </div>
