--- a/person.html
+++ b/person.html
@@ -109,7 +109,7 @@
                         expand_more
                       </span>
                     </div>
-                    <div class="round-btn round-btn-primary">
+                    <div class="round-btn round-btn-primary" id="search-btn">
                       <span class="material-symbols-outlined" id="addMenuBtn">
                         search
                       </span>
