group-fields html

--- a/person.html
+++ b/person.html
@@ -423,36 +423,33 @@
                   >
                     <div class="group green">
                       <div class="group-fields">
-                        <span class="edit-content medium">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                shop
-                              </span>
-                              חשבונית מס זיכוי</span
-                            >
-                          </span>
-                        </span>
-                        <span class="edit-content medium">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                shop
-                              </span>
-                              חשבונית עסקה זיכוי</span
-                            >
-                          </span>
-                        </span>
-                        <span class="edit-content">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                paid
-                              </span>
-                              קבלה זיכוי</span
-                            >
-                          </span>
-                        </span>
+                        <div class="group-item">
+                          <div class="group-item-topic">חשבונית מס זיכוי</div>
+                          <div class="show-box">
+                            <span>הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span>הוסף</span>
+                          </div>
+                        </div>
+                        <div class="group-item">
+                          <div class="group-item-topic">חשבונית עסקה זיכוי</div>
+                          <div class="show-box">
+                            <span class="hover-text">הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span class="hover-text">הוסף</span>
+                          </div>
+                        </div>
+                        <div class="group-item">
+                          <div class="group-item-topic">קבלה זיכוי</div>
+                          <div class="show-box">
+                            <span class="hover-text">הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span class="hover-text">הוסף</span>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -462,46 +459,42 @@
                   >
                     <div class="group green">
                       <div class="group-fields">
-                        <span class="edit-content">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                shop
-                              </span>
-                              הוראת זיכוי</span
-                            >
-                          </span>
-                        </span>
-                        <span class="edit-content">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                shop
-                              </span>
-                              הוראת חיוב</span
-                            >
-                          </span>
-                        </span>
-                        <span class="edit-content">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                paid
-                              </span>
-                              הפקדת בנק
-                            </span>
-                          </span>
-                        </span>
-                        <span class="edit-content">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                local_atm
-                              </span>
-                              קבלה</span
-                            >
-                          </span>
-                        </span>
+                        <div class="group-item">
+                          <div class="group-item-topic">הוראת זיכוי</div>
+                          <div class="show-box">
+                            <span>הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span>הוסף</span>
+                          </div>
+                        </div>
+                        <div class="group-item">
+                          <div class="group-item-topic">הוראת חיוב</div>
+                          <div class="show-box">
+                            <span class="hover-text">הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span class="hover-text">הוסף</span>
+                          </div>
+                        </div>
+                        <div class="group-item">
+                          <div class="group-item-topic">הפקדת בנק</div>
+                          <div class="show-box">
+                            <span class="hover-text">הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span class="hover-text">הוסף</span>
+                          </div>
+                        </div>
+                        <div class="group-item">
+                          <div class="group-item-topic">קבלה</div>
+                          <div class="show-box">
+                            <span class="hover-text">הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span class="hover-text">הוסף</span>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -523,7 +516,7 @@
                             <span class="hover-text">הצג</span>
                           </div>
                           <div class="show-box">
-                            <span class="hover-text">ארגון</span>
+                            <span class="hover-text">הוסף</span>
                           </div>
                         </div>
                       </div>
@@ -532,72 +525,66 @@
                   <div class="group-container-create active" data-color="send">
                     <div class="group blue">
                       <div class="group-fields">
-                        <span class="edit-content">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                mail
-                              </span>
-                              מייל</span
-                            >
-                          </span>
-                        </span>
-                        <span class="edit-content">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                sms
-                              </span>
-                              SMS</span
-                            >
-                          </span>
-                        </span>
+                        <div class="group-item">
+                          <div class="group-item-topic">מייל</div>
+                          <div class="show-box">
+                            <span>הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span>הוסף</span>
+                          </div>
+                        </div>
+                        <div class="group-item">
+                          <div class="group-item-topic">שלח</div>
+                          <div class="show-box">
+                            <span class="hover-text">הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span class="hover-text">הוסף</span>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
                   <div class="group-container-create active" data-color="red">
                     <div class="group">
                       <div class="group-fields">
-                        <span class="edit-content medium">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                paid
-                              </span>
-                              תעודת משלוח</span
-                            >
-                          </span>
-                        </span>
-                        <span class="edit-content medium">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                paid
-                              </span>
-                              תעודת החזרה</span
-                            >
-                          </span>
-                        </span>
-                        <span class="edit-content medium">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                shop
-                              </span>
-                              כניסה למלאי</span
-                            >
-                          </span>
-                        </span>
-                        <span class="edit-content medium">
-                          <span class="edit-field">
-                            <span class="value-text">
-                              <span class="material-symbols-outlined">
-                                shop
-                              </span>
-                              יציאה מהמלאי</span
-                            >
-                          </span>
-                        </span>
+                        <div class="group-item">
+                          <div class="group-item-topic">תעודת משלוח</div>
+                          <div class="show-box">
+                            <span>הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span>הוסף</span>
+                          </div>
+                        </div>
+                        <div class="group-item">
+                          <div class="group-item-topic">תעודת החזרה</div>
+                          <div class="show-box">
+                            <span class="hover-text">הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span class="hover-text">הוסף</span>
+                          </div>
+                        </div>
+                        <div class="group-item">
+                          <div class="group-item-topic">כניסה למלאי</div>
+                          <div class="show-box">
+                            <span class="hover-text">הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span class="hover-text">הוסף</span>
+                          </div>
+                        </div>
+                        <div class="group-item">
+                          <div class="group-item-topic">יציאה מהמלאי</div>
+                          <div class="show-box">
+                            <span class="hover-text">הצג</span>
+                          </div>
+                          <div class="show-box">
+                            <span class="hover-text">הוסף</span>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
