--- a/person.html
+++ b/person.html
@@ -143,7 +143,10 @@
               <div class="navbar-bottom create-show active">
                 <div class="create-container">
                   <div class="icons-container-create">
-                    <div class="create-category" data-color="gray">
+                    <div
+                      class="create-category focus-category"
+                      data-color="gray"
+                    >
                       <span>מועדפים</span>
                     </div>
 
@@ -183,7 +186,7 @@
                       <span>לוגיסטיקה</span>
                     </div>
                   </div>
-                  <div class="group-container-create active" data-color="gray">
+                  <div class="group-container-create" data-color="gray">
                     <div class="group-blue">
                       <div class="group-fields">
                         <div class="group-item">
