--- a/person.html
+++ b/person.html
@@ -208,10 +208,10 @@
                   <div class="group-item">
                     <div class="group-item-topic">דף הבית</div>
                     <div class="show-box">
-                      <span>הצג</span>
+                      <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span>הוסף</span>
+                      <span class="hover-example">הוסף</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -262,10 +262,10 @@
                   <div class="group-item">
                     <div class="group-item-topic">דיווח שעות עצמי</div>
                     <div class="show-box">
-                      <span>הצג</span>
+                      <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span>הוסף</span>
+                      <span class="hover-example">הוסף</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -340,10 +340,10 @@
                   <div class="group-item">
                     <div class="group-item-topic">הזדמנות</div>
                     <div class="show-box">
-                      <span>הצג</span>
+                      <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span>הוסף</span>
+                      <span class="hover-example">הוסף</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -382,10 +382,10 @@
                   <div class="group-item">
                     <div class="group-item-topic">דיווח שעות עצמי</div>
                     <div class="show-box">
-                      <span>הצג</span>
+                      <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span>הוסף</span>
+                      <span class="hover-example">הוסף</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -433,10 +433,10 @@
                   <div class="group-item">
                     <div class="group-item-topic">חשבונית מס זיכוי</div>
                     <div class="show-box">
-                      <span>הצג</span>
+                      <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span>הוסף</span>
+                      <span class="hover-example">הוסף</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -466,10 +466,10 @@
                   <div class="group-item">
                     <div class="group-item-topic">הוראת זיכוי</div>
                     <div class="show-box">
-                      <span>הצג</span>
+                      <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span>הוסף</span>
+                      <span class="hover-example">הוסף</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -508,10 +508,10 @@
                   <div class="group-item">
                     <div class="group-item-topic">ליד</div>
                     <div class="show-box">
-                      <span>הצג</span>
+                      <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span>הוסף</span>
+                      <span class="hover-example">הוסף</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -532,10 +532,10 @@
                   <div class="group-item">
                     <div class="group-item-topic">מייל</div>
                     <div class="show-box">
-                      <span>הצג</span>
+                      <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span>הוסף</span>
+                      <span class="hover-example">הוסף</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -556,10 +556,10 @@
                   <div class="group-item">
                     <div class="group-item-topic">תעודת משלוח</div>
                     <div class="show-box">
-                      <span>הצג</span>
+                      <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span>הוסף</span>
+                      <span class="hover-example">הוסף</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -598,10 +598,10 @@
                   <div class="group-item">
                     <div class="group-item-topic">דיווח שעות עצמי</div>
                     <div class="show-box">
-                      <span>הצג</span>
+                      <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span>הוסף</span>
+                      <span class="hover-example">הוסף</span>
                     </div>
                   </div>
                   <div class="group-item">
