--- a/person.html
+++ b/person.html
@@ -210,9 +210,9 @@
                     <div class="show-box">
                       <span class="hover-example">הצג</span>
                     </div>
-                    <div class="show-box">
+                    <!-- <div class="show-box">
                       <span class="hover-example">הוסף</span>
-                    </div>
+                    </div> -->
                   </div>
                   <div class="group-item">
                     <div class="group-item-topic">אנשים</div>
@@ -220,7 +220,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-example">הוסף</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -252,6 +252,12 @@
                   </div>
                   <div class="group-item">
                     <div class="group-item-topic">קריאות</div>
+                    <div class="show-box">
+                      <span class="hover-text">הצג</span>
+                    </div>
+                    <div class="show-box">
+                      <span class="hover-text">הוסף</span>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -269,7 +275,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קריאה</div>
+                    <div class="group-item-topic">קריאות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -278,7 +284,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">משימה</div>
+                    <div class="group-item-topic">משימות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -287,7 +293,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">הערה</div>
+                    <div class="group-item-topic">הערות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -296,7 +302,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">שיחה</div>
+                    <div class="group-item-topic">שיחות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -305,7 +311,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">פגישה</div>
+                    <div class="group-item-topic">פגישות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -323,7 +329,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קובץ</div>
+                    <div class="group-item-topic">קבצים</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -530,7 +536,7 @@
               <div class="group blue">
                 <div class="group-fields">
                   <div class="group-item">
-                    <div class="group-item-topic">מייל</div>
+                    <div class="group-item-topic">מיילים</div>
                     <div class="show-box">
                       <span class="hover-example">הצג</span>
                     </div>
@@ -539,7 +545,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">שלח</div>
+                    <div class="group-item-topic">הודעות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -605,7 +611,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קריאה</div>
+                    <div class="group-item-topic">קריאות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -614,7 +620,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">משימה</div>
+                    <div class="group-item-topic">משימות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -623,7 +629,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">הערה</div>
+                    <div class="group-item-topic">הערות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -632,7 +638,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">שיחה</div>
+                    <div class="group-item-topic">שיחות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -641,7 +647,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">פגישה</div>
+                    <div class="group-item-topic">פגישות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -659,7 +665,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קובץ</div>
+                    <div class="group-item-topic">קבצים</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
