--- a/person.html
+++ b/person.html
@@ -124,7 +124,7 @@
                   <input
                     type="text"
                     class="navbar-input"
-                    placeholder="צור/הצג..."
+                    placeholder="הצג/צור..."
                     id="createInput"
                   />
                   <div class="navbar__main--search__links-container">
